# config-segregate

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
config_cascade/: __init__.py  core.py  readers.py  writers.py
config_segregate/: __init__.py  core.py  readers.py  writers.py
docs/: index.md
pydantic_config_cascade/: core.py  readers.py
search/: search_index.json
tests/: conftest.py  core_test.py  version_reader_test.py
tests/core/: version_reader_test.py
