[tool.poetry]
name = "config-segregate"
version = "0.0.6"
description = "Config-Segregate simplifies Config management by enabling efficient, customizable configurations through classifier-based loading."
license = "MIT"
authors = ["Ross Tsenov <ross.tsenov@github.com>"]
maintainers = ["Ross Tsenov <ross.tsenov@github.com>"]
repository = "https://github.com/ross-tsenov/config-segregate"
documentation = "https://github.com/ross-tsenov/config-segregate/tree/main/docs/"
readme = "README.md"
include = [
    "config_segregate",
]
exclude = [
    "docs/*",
    "tests/*",
]


[tool.poetry.dependencies]
python = "^3.8.1"
toml = {version = "^0.10.2", optional = true}

[tool.poetry.extras]
all = [
    "toml",
]
toml = [
    "toml",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
mypy = "^1.9.0"
pytest = "^8.1.1"
pre-commit = "^3.5.0"


[tool.poetry.group.docs]
optional = true


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 122
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP031"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"*init*.py" = ["F403"]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.8"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
-ra \
-q \
--verbose \
--maxfail=1 \
--color=yes """
testpaths = ["tests/"]
python_files = ["*_test.py"]
python_functions = ["test_*"]
render_collapsed = true
filterwarnings = [
    "ignore",
    "default:::mymodule",
]
